--- a/day1/watchlist/static/css/style.css
+++ b/day1/watchlist/static/css/style.css
@@ -34,3 +34,33 @@ footer{
 .movie-list li:hover{
     background-color: #105aa3;
 }
+nav ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333333;
+}
+nav li{
+    float: left;
+}
+nav li a{
+    display: block;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+}
+nav li a:hover{
+    background-color: #f8f9fa;
+}
+.float-right{
+    float: right;
+}
+.baidu{
+    font-size: 12px;
+    font-weight: bold;
+    color: black;
+    text-decoration: none;
+    background-color: #F5c518;
+    padding: 3px 5px;
+}
