添加删除功能

--- a/day1/watchlist/templates/index.html
+++ b/day1/watchlist/templates/index.html
@@ -18,6 +18,9 @@
             <span class="float-right">
                 <a class="btn" href="{{ url_for('edit',movie_id=movie.id) }}">编辑</a>
             </span>
+            <span class="float-right">
+                <a class="btn" href="{{ url_for('delete',movie_id=movie.id) }}">删除</a>
+            </span>
         </li>
         {% endfor %}
     </ul>
