--- a/day1/watchlist/templates/base.html
+++ b/day1/watchlist/templates/base.html
@@ -21,6 +21,12 @@
             <li>
                 <a href="{{ url_for('index') }}">首页</a>
             </li>
+            <li>
+                <a href="{{ url_for('login') }}">登录</a>
+            </li>
+            <li>
+                <a href="{{ url_for('logout') }}">退出</a>
+            </li>
         </ul>
     </nav>
     {% block content %}{% endblock %}
