--- a/day1/watchlist/templates/index.html
+++ b/day1/watchlist/templates/index.html
@@ -19,8 +19,13 @@
                 <a class="btn" href="{{ url_for('edit',movie_id=movie.id) }}">编辑</a>
             </span>
             <span class="float-right">
-                <a class="btn" href="{{ url_for('delete',movie_id=movie.id) }}">删除</a>
+                <form action="{{ url_for('delete',movie_id=movie.id) }}" method="post">
+                    <input class="btn" type="submit" value="删除" onclick="return confirm('确定删除吗')">
+                </form>
             </span>
+            <!-- <span class="float-right">
+                <a class="btn" href="{{ url_for('delete',movie_id=movie.id) }}">删除</a>
+            </span> -->
         </li>
         {% endfor %}
     </ul>
