--- a/day1/watchlist/static/css/style.css
+++ b/day1/watchlist/static/css/style.css
@@ -48,6 +48,7 @@ nav li a{
     display: block;
     color: white;
     text-align: center;
+    padding: 10px 20px;
     text-decoration: none;
 }
 nav li a:hover{
