--- a/day1/watchlist/templates/base.html
+++ b/day1/watchlist/templates/base.html
@@ -21,12 +21,21 @@
             <li>
                 <a href="{{ url_for('index') }}">首页</a>
             </li>
+            {% if current_user.is_authenticated %}
             <li>
-                <a href="{{ url_for('login') }}">登录</a>
+                <a href="{{ url_for('login') }}">{{ current_user.name }}</a>
             </li>
             <li>
                 <a href="{{ url_for('logout') }}">退出</a>
             </li>
+            <li>
+                <a href="{{ url_for('settings') }}">设置</a>
+            </li>
+            {% else %}
+            <li>
+                <a href="{{ url_for('login') }}">登录</a>
+            </li>
+            {% endif %}
         </ul>
     </nav>
     {% block content %}{% endblock %}
